deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp-deployment
  labels:
    app: pythonapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: pythonapp
  template:
    metadata:
      labels:
        app: pythonapp
    spec:
      containers:
      - name: pythonapp
        image: python-nodename:v1
        ports:
        - containerPort: 8081
