service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp-service-lb
spec:
  selector:
    app: pythonapp
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8081
  type: LoadBalancer
  # type: LoadBalancer # for creating service of type loadbalancer
