service.yml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp-service
spec:
  selector:
    app: pythonapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

  # type: LoadBalancer # for creating service of type loadbalancer
