ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
     paths:
     - path: /something(/|$)(.*)
       pathType: Prefix
       backend:
         service:
           name: pythonapp-service 
           port:
             number: 80
